fix: CWU-115 reopen buttons have become misaligned

--- a/styles/components/_panel-cards.scss
+++ b/styles/components/_panel-cards.scss
@@ -78,7 +78,7 @@
     .button {
       margin-top: 80px;
       span {
-        max-width: 245px;
+        max-width: clamp(216px, 10vw, 245px);
         display: inline-block;
       }
     }
