--- a/styles/components/_static-cards-stack.scss
+++ b/styles/components/_static-cards-stack.scss
@@ -43,6 +43,9 @@
         }
       }
     }
+    .button.is-primary {
+      padding-right: unset;
+    }
     @media screen and (max-width: $mobile) {
       padding-bottom: 0;
     }
@@ -80,7 +83,7 @@
 
 .static-cards-list,
 .three-columns {
-  @media (max-width: 1100px) {
+  @media (max-width: 1376px) {
     .static-card-item-wrapper {
       flex: 1 1 calc(50% - 2rem);
       max-width: calc(50% - 2rem);
